web-infras/parser/tests/fixtures/esprima/expression/primary/object/invalid-getter/output.txt
[SyntaxError]: getter functions must have no arguments (1,11)
1|x = { get y(z) {} }
 |         ^
